# chess

./: CMakeLists.txt  README.md
data/: rook_attack_data
old_src/: bitboard.cpp  bitboard.h  board.cpp  board.h  chess_defs.h  main.cpp  mcts.cpp  mcts.h  move.cpp  move.h  move_generator.cpp  piece.cpp  piece.h  pos.h  ray.h
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  board.cpp  board.h  chess_ai.cpp  chess_ai.h  chess_defs.h  main.cpp  mcts.cpp  mcts.h  minimax.cpp  minimax.h  move.cpp  move.h  move_generator.cpp  move_generator.h  piece.cpp  piece.h  piece_list.cpp  piece_list.h  pos.cpp  pos.h  position.h  ray.cpp  ray.h  types.h
src_old/: board.cpp  board.h  chess_ai.cpp  chess_defs.h  main.cpp  move.cpp  move.h  piece.cpp  piece.h
